--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -3,16 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>search person</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/search.css">
 </head>
 <body>
 
-    <h1>
-        {{ .Hits }}
+    <div class="container">
+        <h1 class="align-content-center">go-crawler profile gallery</h1>
+
+        <div class="search-area">
+            <form action="/search" method="GET" class="form-inline">
+                <input type="text" name="q" placeholder="Please input condition, like: 女 已购房"
+                       class="form-control col-10">
+                <div class="col-1"></div>
+                <button type="submit" class="form-control col-1">搜索</button>
+            </form>
+        </div>
+
+        <p>共找到<em>{{ .Hits }}</em>条记录</p>
+        <table class="table-striped table-bordered table-result">
+            <tr>
+                <th>昵称</th>
+                <th>性别</th>
+                <th>年龄</th>
+                <th>身高</th>
+                <th>体重</th>
+                <th>星座</th>
+                <th>生肖</th>
+                <th>购房</th>
+                <th>购车</th>
+                <th>收入</th>
+                <th>学历</th>
+                <th>职业</th>
+                <th>户口</th>
+                <th>生活照片</th>
+            </tr>
         {{range .Items}}
-            <div>
-                <a href="{{ .Url }}">{{ .Url }}</a>
-            </div>
+            <tr>
+                <td><a href="{{ .Url }}">{{ .Payload.Name }}</a></td>
+            {{with .Payload}}
+                <td>{{.Gender}}</td>
+                <td>{{.Age}}</td>
+                <td>{{.Height}}</td>
+                <td>{{.Weight}}</td>
+                <td>{{.Constellation}}</td>
+                <td>{{.Zodiac}}</td>
+                <td>{{.House}}</td>
+                <td>{{.Car}}</td>
+                <td>{{.Salary}}</td>
+                <td>{{.Education}}</td>
+                <td>{{.Occupation}}</td>
+                <td>{{.NativePlace}}</td>
+                <td class="img-td"><img src="{{ .Pic }}" alt="" align="middle"></td>
+            {{end}}
+            </tr>
         {{end}}
+        </table>
+    </div>
+
+    <h1>
+
     </h1>
+
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/popper.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
