--- a/frontend/view/index.html
+++ b/frontend/view/index.html
@@ -28,6 +28,7 @@
                 <th>年龄</th>
                 <th>身高</th>
                 <th>体重</th>
+                <th>工作地</th>
                 <th>星座</th>
                 <th>生肖</th>
                 <th>购房</th>
@@ -46,6 +47,7 @@
                 <td>{{.Age}}</td>
                 <td>{{.Height}}</td>
                 <td>{{.Weight}}</td>
+                <td>{{.Workplace}}</td>
                 <td>{{.Constellation}}</td>
                 <td>{{.Zodiac}}</td>
                 <td>{{.House}}</td>
